[package]
name = "mcmodgetter"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12.24", features = ["json", "native-tls-vendored"]}
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
futures = "0.3.31"
sha2 = "0.10.9"
hex = "0.4.3"